# rust-scopegraphs

./: .gitattributes  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  examples  flake.nix  rust-toolchain.toml  tutor.toml
.cargo/: config.toml
.github/workflows/: rust.yml
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/src/traits/: traits.rs.html
doc/traits/: all.html  index.html  sidebar-items.js  trait.ScopeGraph.html
scopegraphs/: Cargo.toml  README.md
scopegraphs-lib/: Cargo.toml
scopegraphs-lib/src/: completeness.rs  future_wrapper.rs  label.rs  lib.rs  render.rs  resolution_future.rs  scopegraph.rs  storage.rs
scopegraphs-lib/src/completeness/: critical_edge.rs  explicit.rs  future.rs  implicit.rs  mod.rs  unchecked.rs
scopegraphs-lib/src/containers/: env.rs  mod.rs  path.rs  scope.rs
scopegraphs-lib/src/regex/: mod.rs  regular_expression.rs
scopegraphs-lib/src/resolve/: generic_resolution.rs  lookup.rs  mod.rs  params.rs  topdown.rs
scopegraphs-lib/src/resolve/containers/: env.rs  mod.rs  path.rs  scope.rs
scopegraphs-lib/src/resolve/generic_resolution/: env_container.rs  mod.rs  path_container.rs  scope_container.rs
scopegraphs-lib/src/scopegraph/: completeness.rs  mod.rs
scopegraphs-macros/: Cargo.toml
scopegraphs-macros/src/: label.rs  lib.rs  order.rs  regex.rs
scopegraphs-regular-expressions/: Cargo.toml
scopegraphs-regular-expressions/src/: compile.rs  dot.rs  dynamic.rs  emit.rs  lib.rs  parse.rs  regex.rs
scopegraphs-render-docs/: .gitignore  Cargo.toml
scopegraphs-render-docs/src/: attrs.rs  lib.rs  parse.rs
scopegraphs/examples/: records.rs
scopegraphs/examples/overload/: ast.rs  main.rs  parse.rs  type_check.rs  union_find.rs
scopegraphs/examples/records/: ast.rs  main.rs  parse.rs  queries.rs  tests.rs  union_find.rs
scopegraphs/src/: completable_future.rs  future_wrapper.rs  label.rs  lib.rs  render.rs  scopegraph.rs  storage.rs
scopegraphs/src/_concepts/: mod.rs
scopegraphs/src/completeness/: critical_edge.rs  drop.rs  explicit.rs  future.rs  implicit.rs  mod.rs  unchecked.rs
scopegraphs/src/concepts/: completeness.rs  mod.rs  scope.rs
scopegraphs/src/containers/: env.rs  mod.rs  path.rs  scope.rs
scopegraphs/src/docs/concepts/: edges.rs  mod.rs  scope_data.rs
scopegraphs/src/examples/: mod.rs
scopegraphs/src/patterns/: mod.rs
scopegraphs/src/render/: mod.rs  traverse.rs
scopegraphs/src/resolve/: lookup.rs  mod.rs  params.rs
scopegraphs/src/scopegraphs/: mod.rs  traits.rs
scopegraphs/tests/: test_regex.rs
