[package]
name = "scopegraphs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
prust-lib = {git="https://github.com/jdonszelmann/prust", branch = "main"}
syn = { version = "2.0.29", features = ["full", "extra-traits"] }
quote = { version = "1.0.33" , optional = true}
scopegraphs-regular-expressions = {path = "../scopegraphs-regular-expressions"}
scopegraphs-macros = {path = "../scopegraphs-macros"}
futures = "0.3.30"

[dev-dependencies]
scopegraphs = {path = "../scopegraphs"}
env_logger = "0.10.1"
ctor = "0.2.5"
