[package]
name = "scopegraphs-lib"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Aron Zwaan <A.S.Zwaan@tudelft.nl>",
    "Jonathan Dönszelmann <J.B.Doenszelmann@tudelft.nl>"
]
description = "A port of [scopegraphs](https://pl.ewi.tudelft.nl/research/projects/scope-graphs/) to Rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
scopegraphs-prust-lib = {version = "0.1.0"}
syn = { version = "2.0.29", features = ["full", "extra-traits"] }
quote = { version = "1.0.33" , optional = true}
scopegraphs-regular-expressions = {path = "../scopegraphs-regular-expressions", version = "0.1.0"}
scopegraphs-macros = {path = "../scopegraphs-macros", version = "0.1.0"}
futures = "0.3.30"
bumpalo = "3.14.0"

[dev-dependencies]
scopegraphs = {path = "../scopegraphs"}
env_logger = "0.10.1"
ctor = "0.2.5"
