[package]
name = "scopegraphs-lib"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Aron Zwaan <A.S.Zwaan@tudelft.nl>",
    "Jonathan Dönszelmann <J.B.Doenszelmann@tudelft.nl>"
]
description = "A port of [scopegraphs](https://pl.ewi.tudelft.nl/research/projects/scope-graphs/) to Rust"
rust-version = "1.77"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dot = ["dep:dot"]

[dependencies]
syn = { version = "2.0.29", features = ["full", "extra-traits"] }
quote = { version = "1.0.33", optional = true }
scopegraphs-regular-expressions = { path = "../scopegraphs-regular-expressions", version = "0.1.0" }
scopegraphs-macros = { path = "../scopegraphs-macros", version = "0.1.0" }
futures = "0.3.30"
bumpalo = "3.14.0"
dot = { version = "0.1.4", optional = true }

[dev-dependencies]
scopegraphs = { path = "../scopegraphs" }
