[package]
name = "scopegraphs-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.29", features = ["derive"] }
quote = "1.0.33"
scopegraphs-regular-expressions = {path = "../scopegraphs-regular-expressions"}
