[package]
name = "scopegraphs-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

scopegraphs-regular-expressions = { workspace = true, features = ["dot"] }

[dev-dependencies]
scopegraphs.workspace = true

[features]
dot = ["scopegraphs-regular-expressions/dot"]
