[package]
name = "scopegraphs-regular-expressions"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Aron Zwaan <A.S.Zwaan@tudelft.nl>",
    "Jonathan Dönszelmann <J.B.Doenszelmann@tudelft.nl>"
]
description = "A port of scopegraphs (https://pl.ewi.tudelft.nl/research/projects/scope-graphs/) to Rust"
repository = "https://github.com/metaborg/rust-scopegraphs/"
rust-version = "1.75"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = { version = "2", default-features = false, features = ["parsing", "derive", "printing", "clone-impls"] }
quote = { version = "1" }
proc-macro2 = "1"
thiserror = "1"

[features]
dot = []
dynamic = []
