[package]
name = "scopegraphs-regular-expressions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
thiserror.workspace = true

[features]
dot = []
dynamic = []
