[package]
name = "scopegraphs-render-docs"
version.workspace = true
authors = [
    "Mike Lubinets <git@mkl.dev>",
    "Frank Rehberger <frehberg@gmail.com>",
    "Jonathan Dönszelmann <jonathan@donsz.nl>",
]
description = "Derived from Aquamarine, a mermaid.js integration for rustdoc, renders scopegraphs by executing doctests to generate mermaid"
keywords = ["proc_macro", "docs", "rustdoc", "mermaid", "diagram"]
categories = ["visualization", "development-tools::build-utils"]
repository.workspace = true
rust-version.workspace = true
edition = "2018"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "doc/js/**"]

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
proc-macro-error = { version = "1", default-features = false }
itertools = "0.13"
include_dir = "0.7"
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1"
