[package]
name = "scopegraphs"
version = "0.2.6"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Aron Zwaan <A.S.Zwaan@tudelft.nl>",
    "Jonathan Dönszelmann <J.B.Doenszelmann@tudelft.nl>"
]
description = "A port of scopegraphs https://pl.ewi.tudelft.nl/research/projects/scope-graphs/ to Rust"
repository = "https://github.com/metaborg/rust-scopegraphs/"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.30", default-features = false, features = ["std"] }

bumpalo = "3.14.0"
dot = { version = "0.1.4", optional = true }
scopegraphs-prust-lib = { version = "0.1.0" }
log = "0.4.20"

scopegraphs-macros = { path = "../scopegraphs-macros", version = "0.2.0" }
scopegraphs-regular-expressions = { path = "../scopegraphs-regular-expressions", version = "0.2.0" }

[dev-dependencies]
env_logger = "0.10.1"
ctor = "0.2.5"
futures = { version = "0.3.30", default-features = false, features = ["alloc", "executor"] }
smol = "2.0.0"

[features]
default = ["dot", "dynamic-regex"]
dot = ["scopegraphs-regular-expressions/dot", "scopegraphs-macros/dot", "dep:dot"]
dynamic-regex = ["scopegraphs-regular-expressions/dynamic"]
documentation = []

[package.metadata.playground]
features = ["documentation"]

[package.metadata.docs.rs]
features = ["documentation"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
