[package]
name = "scopegraphs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }

bumpalo = "3"
scopegraphs-prust-lib = "0.1.0"
log = "0.4"

scopegraphs-macros.workspace = true
scopegraphs-regular-expressions.workspace = true
scopegraphs-render-docs = { workspace = true, optional = true }

[dev-dependencies]
env_logger = "0.11"
ctor = "0.2"
futures = { version = "0.3", default-features = false, features = [
    "alloc",
    "executor",
] }
smol = "2"
async-recursion = "1"
winnow = "0.6"

[features]
default = ["dot", "dynamic-regex"]
dot = ["scopegraphs-regular-expressions/dot", "scopegraphs-macros/dot"]
dynamic-regex = ["scopegraphs-regular-expressions/dynamic"]
documentation = ["dep:scopegraphs-render-docs"]

[package.metadata.playground]
features = ["documentation"]

[package.metadata.docs.rs]
features = ["documentation"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
